--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ rt
 {
     margin-top: 1.5rem;
     margin-bottom: 0.5rem;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 4rem;
+    height: 4rem;
     border: none;
-    outline: 0.35rem solid #fff;
+    border: 0.35rem solid #fff;
     background-color: black;
     color: white;
     font-size: 1.5rem;
